--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,7 @@
 <nav>
 
     <div class="container nav-wrapper">
-        <a href="/" class="brand-logo">Echo Cortuna</a>
+        <a href="/" class="brand-logo">Cortuna</a>
         <ul id="nav-mobile" class="right">
             <li><a href="/">Home</a></li>
         </ul>
@@ -24,34 +24,19 @@
 </nav>
 
 <div class="container">
-    <h1 style="text-align: center">What do you want to search for?</h1>
-    <div class="row">
-        <div class="col s4">
-            <!-- Promo Content 1 goes here -->
-            <div class="center">
-                <i class="large material-icons" style="color: #EE6E73">flash_on</i>
-                <p>Fast craigslist web scraper</p>
-                <p class="light center">Scrape away right here with a beautiful GUI.</p>
-            </div>
-        </div>
+    <h1 style="text-align: center">ANO HANAP MO???</h1>
 
-         <div class="col s4">
+
+         <div class="col s12">
             <!-- Promo Content 2 goes here -->
             <div class="center">
                 <i class="large material-icons" style="color: orange">camera</i>
                 <p>Filter your searches</p>
-                <p class="light center">We built in functionality to filter based on pricing.</p>
+                <p class="light center">Search something  -echo</p>
             </div>
         </div>
 
-        <div class="col s4">
-            <!-- Promo Content 3 goes here -->
-            <div class="center">
-                <i class="large material-icons" style="color: blue">chrome_reader_mode</i>
-                <p>A much sexier front-end to Craigslist</p>
-                <p class="light center">We built this with ❤️</p>
-            </div>
-        </div>
+
     </div>
 
     <form action="{% url 'new_search' %}" method="post">
